--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,6 @@ name = "Coordinates"
 uuid = "15ac8fbd-cb39-4be8-bb90-8f74d06af8f8"
 authors = ["Keita Nakamura <keita.nakamura.1109@gmail.com>"]
 version = "0.1.0"
+
+[compat]
+julia = "1"
