--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,9 @@
 name: CI
-on: [push, pull_request]
+on:
+  pull_request:
+  push:
+    branches: main
+    tags: '*'
 jobs:
   test:
     if: "!contains(github.event.head_commit.message, 'skip ci')"
